# ethsnarks

./: .gitignore  .gitmodules  CMakeLists.txt
ethsnarks/: scalar_mult_testvectors.py
src/: CMakeLists.txt  ethsnarks.hpp  export.cpp  import.cpp  inner_ec_pp.hpp  utils.cpp  utils.hpp
src/crypto/signatures/: eddsa.cpp  eddsa.h
src/gadgets/: CMakeLists.txt  assertnonzero.cpp  assertnonzero.hpp  field2bits_strict.cpp  lookup_3bit_zcash.cpp  lookup_3bit_zcash.hpp  poseidon.hpp  poseidon_orig.cpp  poseidon_orig.hpp  poseidon_precomputed_parameters.h  sha256_many.cpp  subadd.cpp
src/jubjub/: adder.cpp  adder.hpp  doubler.cpp  doubler.hpp  eddsa.cpp  eddsa.hpp  fixed_base_mul.cpp  fixed_base_mul.hpp  montgomery.cpp  montgomery.hpp  notloworder.cpp  notloworder.hpp  params.hpp  pedersen_hash.cpp  pedersen_hash.hpp  point.cpp  scalarmult.cpp
src/r1cs_gg_ppzksnark_zok/: CMakeLists.txt  r1cs_gg_ppzksnark_zok.hpp  r1cs_gg_ppzksnark_zok.tcc  r1cs_gg_ppzksnark_zok_params.hpp  r1cs_gg_ppzksnark_zok_pp.hpp
src/r1cs_gg_ppzksnark_zok/profiling/: profile_r1cs_gg_ppzksnark_zok.cpp
src/test/: CMakeLists.txt  test_eddsa_signature.cpp  test_field_packing.cpp  test_lookup_3bit_zcash.cpp  test_poseidon.cpp  test_poseidon_sponge.cpp
src/test/benchmark/: benchmark_eddsa.cpp  benchmark_poseidon.cpp
src/test/jubjub/: test_jubjub_mul_fixed.cpp
